Styled delete player button, fixed buttons alignment, added grid, started working on player buttons

--- a/src/styles/blocks/container.css
+++ b/src/styles/blocks/container.css
@@ -1,3 +1,6 @@
 .container {
-  
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto auto auto;
+  gap: 20px;
 }
