--- a/src/styles/blocks/page.css
+++ b/src/styles/blocks/page.css
@@ -1,5 +1,5 @@
 .page {
-
+  background-color: black;
   scroll-behavior: smooth;
 }
 
